[package]
name = "dcbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
serenity = "0.11.5"
ron = "0.8.0"
serde = "1.0.163"
chrono = "0.4.26"
sys-info = "0.9.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
songbird = { version = "0.3.2", features = ["yt-dlp", "builtin-queue", "serenity"] }
dotenv = "0.15.0"