[package]
name = "dcbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
serenity = "0.12.1"
ron = "0.8.0"
serde = "1.0.163"
chrono = "0.4.26"
sys-info = "0.9.1"
dotenv = "0.15.0"
rspotify = "0.11.7"
env_logger = "0.10.0"
songbird = {version = "0.4.1", features = ["builtin-queue", "serenity"]}
reqwest = "0.11.27"
symphonia = { version = "0.5.2", features = ['pcm','mp3','wav','isomp4','aac','alac'] }
